--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "mongoose": "^8.19.4",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
+    "node-cache": "^5.1.2",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
