--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
     "node-cache": "^5.1.2",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "yahoo-finance2": "^3.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
